# haskell-kata-berlin-clock

./: .gitignore  Guardfile  README.md  sample.cabal
src/: Sample.hs
test/: SampleSpec.hs
