name:                sample
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Sample
  build-depends:       base
                     , hspec
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010
